--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
       <div class="frontside" id="frontside"></div>
       <div class="backside" id="backside"></div>
     </div>
+    <button class="nextButton" type="button">Next card</button>
+    <button class="previousButton" type="button">Previous card</button>
   </body>
 </html>
