--- a/index.html
+++ b/index.html
@@ -18,5 +18,18 @@
     </div>
     <button class="nextButton" type="button">Next card</button>
     <button class="previousButton" type="button">Previous card</button>
+    <button class="newCardButton" type="button">Add new card</button>
+    <div id="popupForm" class="popup">
+      <div class="popup-content">
+        <span class="close-btn">&times;</span>
+        <form id="cardForm">
+          <label for="question">Word:</label>
+          <input type="text" id="question" name="question" required />
+          <label for="answer">Answer:</label>
+          <input type="text" id="answer" name="answer" required />
+          <button type="submit">Add Card</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
