--- a/index.html
+++ b/index.html
@@ -20,16 +20,18 @@
     <button class="nextButton" type="button">Next card</button>
     <button class="previousButton" type="button">Previous card</button>
     <button class="newCardButton" type="button">Add new card</button>
+    <button class="deleteCardButton" type="button"> Delete card</button>
     <div class="popup-content">
       <div class="inputGroup">
-        <input type="text" required />
+        <input type="text" id="wordInput" required />
         <label for="word">Word</label>
       </div>
       <div class="inputGroup">
-        <input type="text" required />
+        <input type="text" id="translationInput" required />
         <label for="translation">Translation</label>
       </div>
       <button class="submitButton" type="button">submit</button>
+      <button class="cancelButton" type="button">cancel</button>
     </div>
   </body>
 </html>
