--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'; connect-src 'self' http://localhost:5000;"
+      content="img-src 'self' data:; default-src 'self'; script-src 'self'; connect-src 'self' http://localhost:5000;"
     />
     <title>FlashcardApp</title>
     <link rel="stylesheet" href="styles.css" />
@@ -12,14 +12,15 @@
     <script src="eventhandlers.js" defer></script>
   </head>
   <body>
-    <h1>FlashcardApp</h1>
-    <div class="flashchard" id="flashcard">
+    <div id="flashcard">
       <div class="frontside" id="frontside"></div>
       <div class="backside" id="backside"></div>
     </div>
-    <button class="nextButton" type="button">Next card</button>
-    <button class="previousButton" type="button">Previous card</button>
-    <button class="newCardButton" type="button">Add new card</button>
+    <div id="browseButtons">
+      <div id="prevCard"></div>
+      <div id="nextCard"></div>
+    </div>
+    <button class="newCardButton" type="button">Add card</button>
     <button class="deleteCardButton" type="button"> Delete card</button>
     <div class="popup-content">
       <div class="inputGroup">
